Чистка кода ADocument