@@ -2,13 +2,8 @@ package ru.socionicasys.analyst;
 
 import java.awt.Color;
 import java.io.FileInputStream;
-import java.io.FileOutputStream;
-import java.io.InputStreamReader;
-import java.nio.charset.Charset;
 import java.util.*;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
-
+import java.util.Map.Entry;
 import javax.swing.event.*;
 import javax.swing.text.*;
 import javax.swing.undo.AbstractUndoableEdit;
@@ -16,7 +11,6 @@ import javax.swing.undo.CannotRedoException;
 import javax.swing.undo.CannotUndoException;
 import javax.swing.undo.CompoundEdit;
 import javax.swing.undo.UndoableEdit;
-
 
 public class ADocument extends DefaultStyledDocument implements DocumentListener {
 	public static final String DEFAULT_TITLE = "Новый документ";
@@ -26,19 +20,15 @@ public class ADocument extends DefaultStyledDocument implements DocumentListener
 	public static final String ClientProperty = "Типируемый:";
 	public static final String DateProperty = "Дата:";
 	public static final String CommentProperty = "Комментарий:";
+	private static final long serialVersionUID = 4600082566231722109L;
 
+	private Map<ASection, AData> aDataMap;
+	private Collection<ADocumentChangeListener> listeners;
+	public final SimpleAttributeSet defaultStyle;
+	public final SimpleAttributeSet defaultSectionAttributes;
+	public final SimpleAttributeSet defaultSearchHighlightAttributes;
 
-	protected HashMap<ASection, AData> aDataMap;
-	protected Vector<ADocumentChangeListener> listeners;
-	public SimpleAttributeSet defaultStyle;
-	public SimpleAttributeSet defaultSectionAttributes;
-	public SimpleAttributeSet defaultSearchHighlightAttributes;
-
-	private int progress = 0;
-	private CompoundEdit currentCompoundEdit = null;
-	private boolean blockUndoEvents = false;
-	//	private boolean blockremoveUpdate = false;
-	private boolean blockRemoveUpdate;
+	private CompoundEdit currentCompoundEdit;
 	private String keyword;
 
 	ADocument() {
@@ -48,7 +38,7 @@ public class ADocument extends DefaultStyledDocument implements DocumentListener
 
 		//style of general text
 		defaultStyle = new SimpleAttributeSet();
-		defaultStyle.addAttribute(StyleConstants.FontSize, new Integer(16));
+		defaultStyle.addAttribute(StyleConstants.FontSize, Integer.valueOf(16));
 		defaultStyle.addAttribute(StyleConstants.Background, Color.white);
 		//style of a section with mark-up
 		defaultSectionAttributes = new SimpleAttributeSet();
@@ -61,8 +51,11 @@ public class ADocument extends DefaultStyledDocument implements DocumentListener
 	}
 
 	public void initNew() {
-		if (aDataMap == null) aDataMap = new HashMap<ASection, AData>();
-		else aDataMap.clear();
+		if (aDataMap == null) {
+			aDataMap = new HashMap<ASection, AData>();
+		} else {
+			aDataMap.clear();
+		}
 		try {
 			this.replace(0, getLength(), "", defaultStyle);
 		} catch (BadLocationException e) {
@@ -70,12 +63,12 @@ public class ADocument extends DefaultStyledDocument implements DocumentListener
 			e.printStackTrace();
 		}
 
-		putProperty((Object) TitleProperty, (Object) DEFAULT_TITLE);
-		putProperty((Object) ExpertProperty, (Object) "");
-		putProperty((Object) ClientProperty, (Object) "");
+		putProperty(TitleProperty, DEFAULT_TITLE);
+		putProperty(ExpertProperty, "");
+		putProperty(ClientProperty, "");
 		Date date = new Date();
-		putProperty((Object) DateProperty, (Object) date.toLocaleString());
-		putProperty((Object) CommentProperty, "");
+		putProperty(DateProperty, date.toLocaleString());
+		putProperty(CommentProperty, "");
 
 		setCharacterAttributes(0, 1, defaultStyle, true);
 		fireADocumentChanged();
@@ -90,7 +83,7 @@ public class ADocument extends DefaultStyledDocument implements DocumentListener
 	 * @return блок, содержащий заданную позицию, или null, если такого нет
 	 */
 	public ASection getASection(final int pos) {
-		ArrayList<ASection> results = new ArrayList<ASection>();
+		Collection<ASection> results = new ArrayList<ASection>();
 		for (ASection as : aDataMap.keySet()) {
 			if (as.containsOffset(pos)) {
 				results.add(as);
@@ -113,319 +106,178 @@ public class ADocument extends DefaultStyledDocument implements DocumentListener
 		});
 	}
 
-	public ASection getASectionThatStartsAt(int pos1) {
-		Set<ASection> set = aDataMap.keySet();
-//	Vector <ASection> results = new Vector <ASection>();
-		ASection r = null;
-
-		Iterator<ASection> it = set.iterator();
-		while (it.hasNext()) {
-			r = it.next();
-			if (r.getStartOffset() == pos1) return r;
+	public ASection getASectionThatStartsAt(int startOffset) {
+		for (ASection section : aDataMap.keySet()) {
+			if (section.getStartOffset() == startOffset) {
+				return section;
+			}
 		}
 		return null;
 	}
 
-	public AttributeSet getASectionAttributes(ASection as) {
-		//default implementation
-		SimpleAttributeSet set = new SimpleAttributeSet();
-		set.addAttribute(StyleConstants.Background, Color.yellow);
-		return set;
+	@Override
+	public void changedUpdate(DocumentEvent e) {
 	}
 
 	@Override
-	public void changedUpdate(DocumentEvent e) {
-
-	}//changedUpdate(); 	
-
-
-	@Override
-	protected void insertUpdate(AbstractDocument.DefaultDocumentEvent chng, AttributeSet set) {
-
+	protected void insertUpdate(DefaultDocumentEvent chng, AttributeSet attr) {
 		//if insert is on the section end - do not extend the section to the inserted text
-
 		int offset = chng.getOffset();
 		int length = chng.getLength();
 
-		Set<ASection> s = aDataMap.keySet();
-		Iterator<ASection> it = s.iterator();
-		int start = -1;
-		AData aData = null;
-		HashMap<ASection, AData> tempMap = null;
-
-		while (it.hasNext()) {
-			ASection sect = it.next();
+		Iterator<ASection> sectionIterator = aDataMap.keySet().iterator();
+		Map<ASection, AData> tempMap = null;
+		while (sectionIterator.hasNext()) {
+			ASection sect = sectionIterator.next();
 			if (sect.getEndOffset() == offset + length) {
-				if (tempMap == null) tempMap = new HashMap<ASection, AData>();
-				start = sect.getStartOffset();
-				aData = aDataMap.get(sect);
-				it.remove();
+				if (tempMap == null) {
+					tempMap = new HashMap<ASection, AData>();
+				}
+				int start = sect.getStartOffset();
+				AData aData = aDataMap.get(sect);
+				sectionIterator.remove();
 				try {
 					sect = new ASection(createPosition(start), createPosition(offset));
 				} catch (BadLocationException e) {
-
 					e.printStackTrace();
 				}
 				tempMap.put(sect, aData);
 			}
 		}
 
-		if (tempMap != null) aDataMap.putAll(tempMap);
+		if (tempMap != null) {
+			aDataMap.putAll(tempMap);
+		}
 
-		set = defaultStyle;
-
-		super.insertUpdate(chng, set);
-
-//insertCleanup();
-
+		super.insertUpdate(chng, defaultStyle);
 	}
 
 	@Override
-	protected void removeUpdate(AbstractDocument.DefaultDocumentEvent chng) {
-
-		if (blockRemoveUpdate) {
-
-			return;
-		}
+	protected void removeUpdate(DefaultDocumentEvent chng) {
 		startCompoundEdit();
 
-		//blockUndoEvents(true);
 		int offset = chng.getOffset();
-		int length = chng.getLength();
-
-		//ADocumentFragment fragment = getADocFragment((ADocument)chng.getDocument(),offset, length);
-		//UndoableEdit edit = new ADocDeleteEdit(offset, fragment);
-
-/*	
-	try {
-		blockRemoveUpdate = true;
-		this.remove(offset, length);
-		blockRemoveUpdate = false;
-	} catch (BadLocationException e) {
-		e.printStackTrace();
-	}
-		
-*/
-
-		//blockUndoEvents(false);
-
-		removeCleanup(offset, offset + length);
+		removeCleanup(offset, offset + chng.getLength());
 		super.removeUpdate(chng);
-
-		//fireUndoableEditUpdate(new UndoableEditEvent(this, edit));
-		//AnalystWindow.undo.addEdit((UndoableEdit) new UndoableEditEvent(this, edit));
 
 		fireADocumentChanged();
 		endCompoundEdit(null);
-
-//	fireUndoableEditUpdate(new UndoableEditEvent(this, new ADocDeleteEdit(chng.getOffset(), getADocFragment(this, chng.getOffset(),chng.getLength(),false))));
-
 	}
 
 	@Override
 	public void removeUpdate(DocumentEvent e) {
-
-	} //removeUpdate()
+	}
 
 	public void removeCleanup(int start, int end) {
-
 		// проверяет не нужно ли удалить схлопнувшиеся сегменты
-		Set<ASection> s = aDataMap.keySet();
-		Iterator<ASection> it = s.iterator();
 		boolean foundCollapsed = false;
-		Vector<ASection> toRemove = new Vector<ASection>();
-		while (it.hasNext()) {
-			ASection sect = it.next();
-			if (sect.getStartOffset() > start &&
-				sect.getStartOffset() <= end &&
-				sect.getEndOffset() > start &&
-				sect.getEndOffset() <= end
-				) { //it.remove();
+		Collection<ASection> toRemove = new ArrayList<ASection>();
+		for (ASection sect : aDataMap.keySet()) {
+			if (sect.getStartOffset() > start && sect.getStartOffset() <= end &&
+				sect.getEndOffset() > start && sect.getEndOffset() <= end) {
 				toRemove.add(sect);
 				foundCollapsed = true;
 			}
 		}
 
-		for (int i = 0; i < toRemove.size(); i++) {
-			removeASection(toRemove.get(i));
+		for (ASection section : toRemove) {
+			removeASection(section);
 		}
-		if (foundCollapsed) fireADocumentChanged();
-	}
-
-
-	public void insertCleanup() {
-/*	
-	if (aDataMap == null ) return;
-	// проверяет не нужно ли объединить пересекающиеся сегменты с одинаковыми данными
-	Set<ASection> s = aDataMap.keySet();
-	Iterator<ASection> it = s.iterator ();
-	ASection[] sections = s.toArray(new ASection[]{});
-	boolean foundCollapsed = false;
-	while(it.hasNext()){
-		ASection sect = it.next(); 
-		AData dat = this.getAData(sect);
-		for (int i = 0; i< sections.length; i++){
-			ASection curSect = sections[i];
-			AData curData = this.getAData(curSect);
-			if (dat.equals(curData)&& sect!= curSect){
-				if (sect.getStartOffset()>= curSect.getStartOffset()   &&
-					sect.getStartOffset()<= curSect.getEndOffset()){
-					(sections[i]).setEndOffset(Math.max(sect.getEndOffset(), curSect.getEndOffset()));
-					it.remove();
-					foundCollapsed = true;
-				}	 
-				if (sect.getEndOffset()  >= curSect.getStartOffset()   &&
-					sect.getEndOffset()  <= curSect.getEndOffset()){ 
-					(sections[i]).setStartOffset(Math.min(sect.getEndOffset(), curSect.getEndOffset()));
-					it.remove();
-					foundCollapsed = true;
-				}
-			}	
+		if (foundCollapsed) {
+			fireADocumentChanged();
 		}
 	}
-	if (foundCollapsed) fireADocumentChanged();
-*/
-	}
-
 
 	public AData getAData(ASection section) {
-
 		return aDataMap.get(section);
 	}
 
+	public void removeASection(ASection section) {
+		if (section == null) {
+			return;
+		}
+		AData data = aDataMap.get(section);
+		aDataMap.remove(section);
 
-	public void removeASection(ASection aSection) {
-		if (aSection == null) return;
-		AData data = aDataMap.get(aSection);
-		aDataMap.remove(aSection);
+		int startOffset = section.getStartOffset();
+		int endOffset = section.getEndOffset();
+		setCharacterAttributes(startOffset, endOffset - startOffset, defaultStyle, false);
 
-		int st = aSection.getStartOffset();
-		int en = aSection.getEndOffset();
-
-		//startCompoundEdit();
-		setCharacterAttributes(st, en - st, defaultStyle, false);
-		fireUndoableEditUpdate(new UndoableEditEvent(this, new ASectionDeletionEdit(aSection, data)));
-		//endCompoundEdit();
+		fireUndoableEditUpdate(new UndoableEditEvent(this, new ASectionDeletionEdit(section, data)));
 		fireADocumentChanged();
 	}
-
 
 	public void updateASection(ASection aSection, AData data) {
 		AData oldData = aDataMap.get(aSection);
 		aDataMap.remove(aSection);
 		aDataMap.put(aSection, data);
-		fireUndoableEditUpdate(new UndoableEditEvent(this, new ASectionChangeEdit(aSection, oldData, data)));
 
+		fireUndoableEditUpdate(new UndoableEditEvent(this, new ASectionChangeEdit(aSection, oldData, data)));
 		fireADocumentChanged();
 	}
-
 
 	public void addASection(ASection aSection, AData data) {
-
-		int st = aSection.getStartOffset();
-		int en = aSection.getEndOffset();
-		int beg = Math.min(st, en);
-		int len = Math.abs(st - en);
+		int startOffset = aSection.getStartOffset();
+		int endOffset = aSection.getEndOffset();
+		int begin = Math.min(startOffset, endOffset);
+		int length = Math.abs(startOffset - endOffset);
 
 		// удаляет сегменты с такими же границами
-		Set<ASection> s = aDataMap.keySet();
-		Iterator<ASection> it = s.iterator();
-
+		Set<ASection> sectionSet = aDataMap.keySet();
+		Iterator<ASection> it = sectionSet.iterator();
 		while (it.hasNext()) {
-			ASection sect = it.next();
-			if (sect.getStartOffset() == beg && sect.getEndOffset() == beg + len) it.remove();
+			ASection section = it.next();
+			if (section.getStartOffset() == begin && section.getEndOffset() == begin + length) {
+				it.remove();
+			}
 		}
 
-		//startCompoundEdit();
-
-		setCharacterAttributes(beg, len, aSection.getAttributes(), false);
+		setCharacterAttributes(begin, length, aSection.getAttributes(), false);
 		aDataMap.put(aSection, data);
-		fireUndoableEditUpdate(new UndoableEditEvent(this, new ASectionAdditionEdit(aSection, data)));
-		//endCompoundEdit();
 
+		fireUndoableEditUpdate(new UndoableEditEvent(this, new ASectionAdditionEdit(aSection, data)));
 		fireADocumentChanged();
 	}
 
-	public void addADocumentChangeListener(ADocumentChangeListener l) {
-		if (listeners == null) listeners = new Vector<ADocumentChangeListener>();
-		listeners.add(l);
+	public void addADocumentChangeListener(ADocumentChangeListener listener) {
+		if (listeners == null) {
+			listeners = new ArrayList<ADocumentChangeListener>();
+		}
+		listeners.add(listener);
 	}
 
 	public void fireADocumentChanged() {
-		if (listeners == null) return;
-		for (int i = 0; i < listeners.size(); i++) {
-			listeners.get(i).aDocumentChanged(this);
+		if (listeners == null) {
+			return;
+		}
+		for (ADocumentChangeListener listener : listeners) {
+			listener.aDocumentChanged(this);
 		}
 	}
-
-	public String getHTMLStyleForAData(AData data) {
-
-		if (data.getAspect().equals(AData.DOUBT)) {
-			return "background-color:#EAEAEA";
-		}
-		String res = "\"";
-		String dim = data.getDimension();
-		String mv = data.getMV();
-		String sign = data.getSign();
-		if (dim != null &&
-			(dim.equals(AData.D1) ||
-				dim.equals(AData.D2) ||
-				dim.equals(AData.ODNOMERNOST) ||
-				dim.equals(AData.MALOMERNOST))) {
-			res += "background-color:#AAEEEE;";
-		} else if (dim != null &&
-			(dim.equals(AData.D3) ||
-				dim.equals(AData.D4) ||
-				dim.equals(AData.MNOGOMERNOST))) {
-			// противный зеленый
-			res += "background-color:#AAEEAA;";
-		}
-		if (sign != null) {
-			res += "color:#FF0000;";
-		}
-		if (mv != null) {
-			res += "background-color:#FFFFCC;";
-		}
-		//Если не задан другой стиль, то будет этот стиль
-		if (res.equals("\"")) res += "text-decoration:underline";
-
-		res += "\"";
-		return res;
-	}//getStyleForAData()
 
 	@Override
 	public void insertUpdate(DocumentEvent e) {
-
-	}
-
-	public int getProgress() {
-		return progress;
 	}
 
 	public void load(FileInputStream fis, ProgressWindow pw) throws Exception {
 		IOWorker iow = new IOWorker(pw, this, fis);
 		iow.setAppend(false);
 		iow.execute();
-		//while(!iow.isDone());
-		if (iow.getException() != null) throw new Exception(iow.getException());
+		if (iow.getException() != null) {
+			throw iow.getException();
+		}
 	}
 
 	public void append(FileInputStream fis, ProgressWindow pw) throws Exception {
 		IOWorker iow = new IOWorker(pw, this, fis);
 		iow.setAppend(true);
 		iow.execute();
-		//while(!iow.isDone())Thread.currentThread().yield();
-		if (iow.getException() != null) throw new Exception(iow.getException());
+		if (iow.getException() != null) {
+			throw iow.getException();
+		}
 	}
 
-	public void save(FileOutputStream fos, ProgressWindow pw, boolean append) {
-		IOWorker iow = new IOWorker(pw, this, fos);
-		iow.execute();
-		//while(!iow.isDone())Thread.currentThread().yield();
-
-	}
-
-	public HashMap<ASection, AData> getADataMap() {
+	public Map<ASection, AData> getADataMap() {
 		return aDataMap;
 	}
 
@@ -434,26 +286,25 @@ public class ADocument extends DefaultStyledDocument implements DocumentListener
 	}
 
 	public void startCompoundEdit() {
-		if (currentCompoundEdit != null) endCompoundEdit(null);
+		if (currentCompoundEdit != null) {
+			endCompoundEdit(null);
+		}
 		currentCompoundEdit = new CompoundEdit();
 		keyword = null;
 	}
 
-	public void endCompoundEdit(String s) {
-
-		if (currentCompoundEdit == null) return;
-/*	if (!currentCompoundEdit.canUndo() && !currentCompoundEdit.canRedo()) {
-		currentCompoundEdit =null;
-		return;
-	}
-*/
-		if (s == null) {
+	public void endCompoundEdit(String keyword) {
+		if (currentCompoundEdit == null) {
+			return;
+		}
+		if (keyword == null) {
 			currentCompoundEdit.end();
-			fireUndoableEditUpdate(new UndoableEditEvent(this, (UndoableEdit) currentCompoundEdit));
+			fireUndoableEditUpdate(new UndoableEditEvent(this, currentCompoundEdit));
 			currentCompoundEdit = null;
-		} else keyword = s;
+		} else {
+			this.keyword = keyword;
+		}
 	}
-
 
 	@Override
 	protected void fireUndoableEditUpdate(UndoableEditEvent e) {
@@ -462,67 +313,36 @@ public class ADocument extends DefaultStyledDocument implements DocumentListener
 			currentCompoundEdit.addEdit(e.getEdit());
 			currentCompoundEdit.end();
 			keyword = null;
-			//fireUndoableEditUpdate(new UndoableEditEvent(this, (UndoableEdit)currentCompoundEdit));
 		}
 
 		if (currentCompoundEdit != null && currentCompoundEdit.isInProgress()) {
 			currentCompoundEdit.addEdit(e.getEdit());
-		} else super.fireUndoableEditUpdate(e);
+		} else {
+			super.fireUndoableEditUpdate(e);
+		}
 	}
-
 
 	//===================================================================
 	private class ASectionAdditionEdit extends AbstractUndoableEdit {
-
-		boolean canUndo, canRedo;
-		ASection section;
-		AData data;
+		private final ASection section;
+		private final AData data;
 
 		public ASectionAdditionEdit(ASection section, AData data) {
 			this.section = section;
 			this.data = data;
-			canUndo = true;
-			canRedo = false;
-		}
-
-		@Override
-		public boolean canUndo() {
-			return canUndo;
-		}
-
-		@Override
-		public boolean canRedo() {
-			return canRedo;
 		}
 
 		@Override
 		public void undo() throws CannotUndoException {
-			if (!canUndo) throw new CannotUndoException();
-
-			//blockUndoEvents(true);
-			/* setCharacterAttributes(	section.getStartOffset(),
-								 Math.abs(section.getEndOffset()-section.getStartOffset()),
-								 defaultStyle, false);
-		 */
-			//blockUndoEvents(false);
+			super.undo();
 			aDataMap.remove(section);
-			canUndo = false;
-			canRedo = true;
 			fireADocumentChanged();
 		}
 
 		@Override
 		public void redo() throws CannotRedoException {
-			if (!canRedo) throw new CannotRedoException();
-			//blockUndoEvents(true);
-			/*setCharacterAttributes(	section.getStartOffset(),
-								 section.getEndOffset()-section.getStartOffset(),
-								 section.getAttributes(), false);
-		 */
-			//blockUndoEvents(false);
+			super.redo();
 			aDataMap.put(section, data);
-			canUndo = true;
-			canRedo = false;
 			fireADocumentChanged();
 		}
 
@@ -540,81 +360,28 @@ public class ADocument extends DefaultStyledDocument implements DocumentListener
 		public String getRedoPresentationName() {
 			return "Вернуть вставку сегмента анализа";
 		}
-
-		@Override
-		public boolean isSignificant() {
-			return true;
-		}
-
-		@Override
-		public boolean addEdit(UndoableEdit e) {
-			return false;
-		}
-
-		@Override
-		public boolean replaceEdit(UndoableEdit e) {
-			return false;
-		}
-	} // end class ASectionAdditionEdit
-
+	}
 
 	//===================================================================
 	private class ASectionDeletionEdit extends AbstractUndoableEdit {
-
-		boolean canUndo, canRedo;
-		ASection section;
-		AData data;
-
+		private final ASection section;
+		private final AData data;
 
 		public ASectionDeletionEdit(ASection section, AData data) {
 			this.section = section;
 			this.data = data;
-
-			canUndo = true;
-			canRedo = false;
 		}
-
-		@Override
-		public boolean canUndo() {
-			return canUndo;
-		}
-
-		@Override
-		public boolean canRedo() {
-			return canRedo;
-		}
-
 		@Override
 		public void undo() throws CannotUndoException {
-			if (!canUndo) throw new CannotUndoException();
-			//blockUndoEvents(true);
+			super.undo();
 			aDataMap.put(section, data);
-			/*
-		 setCharacterAttributes(	section.getStartOffset(),
-				 section.getEndOffset()-section.getStartOffset(),
-				 section.getAttributes(), false);
-		 */
-			//blockUndoEvents(false);
-
-			canUndo = false;
-			canRedo = true;
 			fireADocumentChanged();
 		}
 
 		@Override
 		public void redo() throws CannotRedoException {
-			if (!canRedo) throw new CannotRedoException();
-			//blockUndoEvents(true);
+			super.redo();
 			aDataMap.remove(section);
-			/*
-		 setCharacterAttributes(	section.getStartOffset(),
-				 section.getEndOffset()-section.getStartOffset(),
-				 defaultStyle, false);
-		 */
-			//blockUndoEvents(false);
-
-			canUndo = true;
-			canRedo = false;
 			fireADocumentChanged();
 		}
 
@@ -632,72 +399,33 @@ public class ADocument extends DefaultStyledDocument implements DocumentListener
 		public String getRedoPresentationName() {
 			return "Вернуть очитску сегмента анализа";
 		}
-
-		@Override
-		public boolean isSignificant() {
-			return true;
-		}
-
-		@Override
-		public boolean addEdit(UndoableEdit e) {
-			return false;
-		}
-
-		@Override
-		public boolean replaceEdit(UndoableEdit e) {
-			return false;
-		}
-	} // end class ASectionDeletionEdit
-
+	}
 
 	//===================================================================
 	private class ASectionChangeEdit extends AbstractUndoableEdit {
-
-		boolean canUndo, canRedo;
-		ASection section;
-		AData oldData, newData;
-
+		private final ASection section;
+		private final AData oldData;
+		private AData newData;
 
 		public ASectionChangeEdit(ASection section, AData oldData, AData newData) {
 			this.section = section;
 			this.oldData = oldData;
 			this.newData = newData;
-
-			canUndo = true;
-			canRedo = false;
-		}
-
-		@Override
-		public boolean canUndo() {
-			return canUndo;
-		}
-
-		@Override
-		public boolean canRedo() {
-			return canRedo;
 		}
 
 		@Override
 		public void undo() throws CannotUndoException {
-			if (!canUndo) throw new CannotUndoException();
-
+			super.undo();
 			aDataMap.remove(section);
 			aDataMap.put(section, oldData);
-
-			canUndo = false;
-			canRedo = true;
 			fireADocumentChanged();
 		}
 
 		@Override
 		public void redo() throws CannotRedoException {
-			if (!canRedo) throw new CannotRedoException();
-
+			super.redo();
 			aDataMap.remove(section);
 			aDataMap.put(section, newData);
-
-			canUndo = true;
-			canRedo = false;
 			fireADocumentChanged();
 		}
 
@@ -717,26 +445,23 @@ public class ADocument extends DefaultStyledDocument implements DocumentListener
 		}
 
 		@Override
-		public boolean isSignificant() {
-			return true;
+		public boolean addEdit(UndoableEdit anEdit) {
+			if ((anEdit instanceof ASectionChangeEdit) && ((ASectionChangeEdit) anEdit).getSection().equals(section)) {
+				newData = ((ASectionChangeEdit) anEdit).getNewData();
+				return true;
+			} else {
+				return super.addEdit(anEdit);
+			}
 		}
 
 		@Override
-		public boolean addEdit(UndoableEdit e) {
-			if ((e instanceof ASectionChangeEdit) && ((ASectionChangeEdit) e).getSection().equals(section)) {
-				newData = ((ASectionChangeEdit) e).getNewData();
+		public boolean replaceEdit(UndoableEdit anEdit) {
+			if ((anEdit instanceof ASectionChangeEdit) && ((ASectionChangeEdit) anEdit).getSection().equals(section)) {
+				newData = ((ASectionChangeEdit) anEdit).getNewData();
 				return true;
-			} else
-				return false;
-		}
-
-		@Override
-		public boolean replaceEdit(UndoableEdit e) {
-			if ((e instanceof ASectionChangeEdit) && ((ASectionChangeEdit) e).getSection().equals(section)) {
-				newData = ((ASectionChangeEdit) e).getNewData();
-				return true;
-			} else
-				return false;
+			} else {
+				return super.replaceEdit(anEdit);
+			}
 		}
 
 		public AData getNewData() {
@@ -746,286 +471,79 @@ public class ADocument extends DefaultStyledDocument implements DocumentListener
 		public ASection getSection() {
 			return section;
 		}
-	} // end class ASectionChangeEdit
-
-	//===================================================================
-	private class ADocDeleteEdit extends AbstractUndoableEdit {
-
-		int position;
-		ADocumentFragment fragment;
-		boolean canUndo;
-		boolean canRedo;
-		private boolean blockRemoveEvents;
-
-		public ADocDeleteEdit(int position, ADocumentFragment fragment) {
-			this.position = position;
-			this.fragment = fragment;
-			canUndo = true;
-			canRedo = false;
-		}
-
-		@Override
-		public boolean canUndo() {
-			return canUndo;
-		}
-
-		@Override
-		public boolean canRedo() {
-			return canRedo;
-		}
-
-		@Override
-		public void undo() throws CannotUndoException {
-			if (!canUndo) throw new CannotUndoException();
-			blockUndoEvents(true);
-			pasteADocFragment(ADocument.this, position, fragment);
-
-			fireADocumentChanged();
-			canUndo = false;
-			canRedo = true;
-			blockUndoEvents(false);
-		}
-
-		@Override
-		public void redo() throws CannotRedoException {
-			if (!canRedo) throw new CannotRedoException();
-			blockUndoEvents(true);
-			try {
-				blockRemoveUpdate = true;
-				ADocument.this.remove(position, fragment.getText().length());
-				removeCleanup(position, position + fragment.getText().length());
-				blockRemoveUpdate = false;
-			} catch (BadLocationException e) {
-
-				e.printStackTrace();
-			}
-			fireADocumentChanged();
-			canUndo = true;
-			canRedo = false;
-			blockUndoEvents(false);
-		}
-
-		@Override
-		public String getUndoPresentationName() {
-			return "Отменить удаление";
-		}
-
-		@Override
-		public String getPresentationName() {
-			return "Удаление";
-		}
-
-		@Override
-		public String getRedoPresentationName() {
-			return "Вернуть удаление";
-		}
-
-		@Override
-		public boolean isSignificant() {
-			return true;
-		}
-
-		@Override
-		public boolean addEdit(UndoableEdit e) {
-			return false;
-		}
-
-		@Override
-		public boolean replaceEdit(UndoableEdit e) {
-			return false;
-		}
-	} // end class ADocDeleteEdit
-
-/////////////////////////////////////////////////////////////////////////////////////////
-
-	//===================================================================
-	private class ADocFragmentPasteEdit extends AbstractUndoableEdit {
-
-		int position;
-		ADocument aDoc;
-		ADocumentFragment fragment;
-		boolean canUndo;
-		boolean canRedo;
-		private boolean blockRemoveEvents;
-
-		public ADocFragmentPasteEdit(int position, ADocument aDoc, ADocumentFragment fragment) {
-			this.position = position;
-			this.aDoc = aDoc;
-			this.fragment = fragment;
-			canUndo = true;
-			canRedo = false;
-		}
-
-		@Override
-		public boolean canUndo() {
-			return canUndo;
-		}
-
-		@Override
-		public boolean canRedo() {
-			return canRedo;
-		}
-
-		@Override
-		public void undo() throws CannotUndoException {
-			if (!canUndo) throw new CannotUndoException();
-			blockUndoEvents(true);
-
-			try {
-				blockRemoveUpdate = true;
-				aDoc.remove(position, fragment.getText().length());
-				removeCleanup(position, fragment.getText().length());
-				blockRemoveUpdate = false;
-			} catch (BadLocationException e) {
-				e.printStackTrace();
-			}
-
-			fireADocumentChanged();
-			canUndo = false;
-			canRedo = true;
-			blockUndoEvents(false);
-		}
-
-		@Override
-		public void redo() throws CannotRedoException {
-			if (!canRedo) throw new CannotRedoException();
-			blockUndoEvents(true);
-			pasteADocFragment(ADocument.this, position, fragment);
-
-			fireADocumentChanged();
-			canUndo = true;
-			canRedo = false;
-			blockUndoEvents(false);
-		}
-
-		@Override
-		public String getUndoPresentationName() {
-			return "Отменить вставку";
-		}
-
-		@Override
-		public String getPresentationName() {
-			return "Вставка";
-		}
-
-		@Override
-		public String getRedoPresentationName() {
-			return "Вернуть вставку";
-		}
-
-		@Override
-		public boolean isSignificant() {
-			return true;
-		}
-
-		@Override
-		public boolean addEdit(UndoableEdit e) {
-			return false;
-		}
-
-		@Override
-		public boolean replaceEdit(UndoableEdit e) {
-			return false;
-		}
-	} // end class ADocFragmentPasteEdit
-
-/////////////////////////////////////////////////////////////////////////////////////////
-
-
-	public void blockUndoEvents(boolean block) {
-		blockUndoEvents = block;
 	}
 
-	public static ADocumentFragment getADocFragment(ADocument aDoc, int offset, int length) {
-
+	public ADocumentFragment getADocFragment(int offset, int length) {
 		int selectionEnd = offset + length;
 		String text = null;
 		HashMap<DocSection, AttributeSet> styleMap = new HashMap<DocSection, AttributeSet>();
 		HashMap<DocSection, AData> docMap = null;
 
 		try {
-			text = aDoc.getText(offset, length);
+			text = getText(offset, length);
 
 			//putting styles to a HashMap
-			Element e = null;
-			AttributeSet as = null;
 			int styleRunStart = offset;
 			AttributeSet currentSet = null;
 			for (int i = offset; i <= offset + length; i++) {
-				e = aDoc.getCharacterElement(i);
-				as = e.getAttributes();
-				if (currentSet == null) currentSet = as;
-				if (!as.isEqual(currentSet) || i == (selectionEnd)) {
-
-					styleMap.put(new DocSection(styleRunStart - offset, i - offset), new SimpleAttributeSet(currentSet));
-					currentSet = as;
+				Element element = getCharacterElement(i);
+				AttributeSet attributeSet = element.getAttributes();
+				if (currentSet == null) {
+					currentSet = attributeSet;
+				}
+				if (!attributeSet.isEqual(currentSet) || i == (selectionEnd)) {
+					styleMap.put(new DocSection(styleRunStart - offset, i - offset),
+						new SimpleAttributeSet(currentSet));
+					currentSet = attributeSet;
 					styleRunStart = i;
 				}
-/*				if (i == (selectionEnd)){
-					styleMap.put(new DocSection(styleRunStart-selectionStart, i-selectionStart), new SimpleAttributeSet(currentSet));
-				} */
 			}
 
 			//putting AData to a HashMap
-			HashMap<ASection, AData> aDataMap = aDoc.getADataMap();
-
 			if (aDataMap != null) {
 				docMap = new HashMap<DocSection, AData>();
-				Set<ASection> keys = aDataMap.keySet();
-				Iterator<ASection> it = keys.iterator();
-				ASection section = null;
-				int secSt;
-				int secEnd;
-				while (it.hasNext()) {
-					section = it.next();
-					secSt = section.getStartOffset();
-					secEnd = section.getEndOffset();
+				for (Entry<ASection, AData> dataEntry : aDataMap.entrySet()) {
+					int secSt = dataEntry.getKey().getStartOffset();
+					int secEnd = dataEntry.getKey().getEndOffset();
 
 					if (secSt >= offset && secEnd <= selectionEnd) {
-						docMap.put(new DocSection(secSt - offset, secEnd - offset),
-							aDataMap.get(section));
+						docMap.put(new DocSection(secSt - offset, secEnd - offset), dataEntry.getValue());
 					}
 
 					if (secSt < offset && secEnd > selectionEnd) {
-						docMap.put(new DocSection(0, length),
-							aDataMap.get(section));
+						docMap.put(new DocSection(0, length), dataEntry.getValue());
 					}
 					if (secSt < offset && secEnd < selectionEnd && secEnd > offset) {
-						docMap.put(new DocSection(0, secEnd - offset),
-							aDataMap.get(section));
+						docMap.put(new DocSection(0, secEnd - offset), dataEntry.getValue());
 					}
 					if (secSt > offset && secSt < selectionEnd && secEnd > selectionEnd) {
-						docMap.put(new DocSection(secSt - offset, length),
-							aDataMap.get(section));
+						docMap.put(new DocSection(secSt - offset, length), dataEntry.getValue());
 					}
 				}
 			}
 		} catch (BadLocationException e) {
 			e.printStackTrace();
+			return null;
 		}
 
 		return new ADocumentFragment(text, styleMap, docMap);
 	}
 
-	public static void pasteADocFragment(ADocument aDoc, int position, ADocumentFragment fragment) {
+	public void pasteADocFragment(int position, ADocumentFragment fragment) {
 		String text = fragment.getText();
 		HashMap<DocSection, AttributeSet> styleMap = fragment.getStyleMap();
 		HashMap<DocSection, AData> fragMap = fragment.getaDataMap();
 
 		try {
 			// inserting plain text
-			//aDoc.blockUndoEvents(true);
-			if (text != null) aDoc.insertString(position, text, aDoc.defaultStyle);
+			if (text != null) {
+				insertString(position, text, defaultStyle);
+			}
 
 			//  inserting styles
 			if (styleMap != null) {
-				Set<DocSection> keys = styleMap.keySet();
-				Iterator<DocSection> it = keys.iterator();
-				DocSection section = null;
-
-				while (it.hasNext()) {
-					section = it.next();
-					aDoc.setCharacterAttributes(position + section.getStart(),
+				for (DocSection section : styleMap.keySet()) {
+					setCharacterAttributes(position + section.getStart(),
 						section.getLength(),
 						styleMap.get(section),
 						true);
@@ -1033,46 +551,15 @@ public class ADocument extends DefaultStyledDocument implements DocumentListener
 			}
 
 			//  inserting AData
-
 			if (fragMap != null) {
-				HashMap<ASection, AData> aDataMap = aDoc.getADataMap();
-
-				Set<DocSection> keys = fragMap.keySet();
-				Iterator<DocSection> it = keys.iterator();
-				DocSection section = null;
-
-				while (it.hasNext()) {
-					section = it.next();
-					aDataMap.put(new ASection(aDoc.createPosition(position + section.getStart()), aDoc.createPosition(position + section.getEnd())),
+				for (DocSection section : fragMap.keySet()) {
+					aDataMap.put(new ASection(createPosition(position + section.getStart()),
+						createPosition(position + section.getEnd())),
 						fragMap.get(section));
 				}
 			}
-			//aDoc.blockUndoEvents(false);
 		} catch (BadLocationException e) {
 			e.printStackTrace();
 		}
 	}
-
-	public boolean containsAnyASection(int min, int max) {
-
-		Set<ASection> s = aDataMap.keySet();
-		Iterator<ASection> it = s.iterator();
-		boolean found = false;
-
-		while (it.hasNext()) {
-			ASection sect = it.next();
-			if ((sect.getStartOffset() > min &&
-				sect.getStartOffset() <= max) ||
-				(sect.getEndOffset() > min &&
-					sect.getEndOffset() <= max)
-				) {
-				found = true;
-			}
-		}
-		return found;
-	}
-} // class ADocument
-
-
-
-
+}
